--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+
 <img src="C:\Users\Sanja\Downloads\Bokeh-modified.png"width="129" height="120">
-<div id="header"></div>
+</head>
+<body>
+ <div id="header"></div>
 <div class="left"></div>
 <div class="stuff">
   <br><br>
@@ -26,4 +32,5 @@
       <li>MBES College Of Engineering, Ambajogai</li>
     </a>
     <li>SSC (SSC complited in 2016-2017)</li>
-<div id="footer">
+
+  </body>
